[workspace]
members = [
    "programs/inco-vault"
]
resolver = "2"
exclude = [
    "rust-sdk",
    "ts-sdk",
    "docs",
    "examples",
    "programs/whirlpool"
]





[profile.release]
overflow-checks = true

[patch.crates-io]
blake3 = { path = "./deps/BLAKE3" }
base64ct = { path = "./deps/formats/base64ct" }

