[package]
name = "inco-vault"
version = "0.1.0"
description = "Privacy-preserving yield vault with Inco encryption and Whirlpool integration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "inco_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.0" }
blake3 = "=1.5.5"



[dev-dependencies]
