[package]
name = "whirlpool"
version = "0.7.0"
publish = false
edition = "2021"
license-file = "../../LICENSE"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
devnet = []
mainnet = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "=0.31.0" }
anchor-spl = { version = "=0.31.0", features = ["metadata", "memo"] }
spl-transfer-hook-interface ={ version = "=0.3.0" }
solana-program = "=1.18.17"
uint = { version = "=0.9.5", default-features = false }
arrayref = { version = "=0.3.9" }
solana-security-txt = { version = "=1.1.2" }
bytemuck = { version = "=1.24.0", features = ["derive", "min_const_generics"] }
num_enum = { version = "=0.7.4" }
bitflags = { version = "=2.10.0" }


[dev-dependencies]
proptest = "=1.9.0"
serde = "=1.0.228"
serde_json = "=1.0.149"

[dev-dependencies.serde_with]
version = "=3.16.1"
features = ["json"]

[patch.crates-io]
blake3 = { path = "../../deps/BLAKE3" }
base64ct = { path = "../../deps/formats/base64ct" }
